# playlist_downloader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: mirror-to-gitlab.yml
src/playlist_downloader/: __init__.py  cli.py  config.py  database.py  downloader.py  models.py  server.py  storage.py  worker.py
src/playlist_downloader/api/: app.py  rate_limit.py  schemas.py
src/playlist_downloader/api/routes/: search.py  spa.py  tasks.py
src/playlist_downloader/core/: paths.py
src/playlist_downloader/integrations/: spotify_client.py
src/playlist_downloader/providers/: __init__.py  shopify.py  soundcloud.py
src/playlist_downloader/services/: download_service.py  search_service.py
src/playlist_downloader/utils/: download_tokens.py  filenames.py
tests/: test_cli.py  test_models.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
web/public/: manifest.json  sitemap.xml
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  endpoints.ts  index.ts  types.ts
web/src/components/: DownloadQueue.tsx  Hero.tsx  Layout.tsx  Legal.tsx  Library.tsx  Onboarding.tsx  Player.tsx  PlaylistView.tsx  RecentActivity.tsx  Search.tsx  Settings.tsx  Sidebar.tsx
web/src/hooks/: useMobileQueue.ts
web/src/utils/: device.ts
