[project]
name = "playlist-downloader"
version = "0.1.0"
description = "CLI utility to download full playlists from Shopify metaobjects or SoundCloud URLs."
requires-python = ">=3.11"
authors = ["Your Name <you@example.com>"]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "typer>=0.12,<0.13",
    "httpx>=0.27,<0.28",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "python-dotenv>=1.0,<2",
    "tqdm>=4.66,<5"
]

[project.scripts]
playlist-downloader = "playlist_downloader.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
